# tracktable-data

./: .gitignore  LICENSE.html  LICENSE.txt  MANIFEST.in  README.md  pyproject.toml  setup.cfg
tracktable-data/tracktable_data/: __init__.py  data.py
tracktable-data/tracktable_data/internal_test_data/GroundTruth/: AltitudeColormap.html  Animate.html  Bbox.html  ColormapMulti.html  ColormapSingle.html  CustomColormap.html  CustomLinewidth.html  Default.html  DefaultPoints.html  DistanceGeometry.html  DotColorSize.html  GradientHueFromColors.html  GradientHueMulti.html  GradientHueSingle.html  Linewidth.html  NoDot.html  ObjIds.html  ObjIdsList.html  PointProperties.html  PointSingleColor.html  Single.html  SolidMulti.html  SolidSingle.html  TileServer.html  Tiles.html
tracktable-data/tracktable_data/internal_test_data/Points/: ads_with_utf8.csv
tracktable-data/tracktable_data/python_example_data/: __init__.py
tracktable-data/tracktable_data/python_info_data/: WPI.dbf  WPI.shp  airport_traffic.py  city_table.py  port_traffic.py  tz_world.dbf  tz_world.shp
tracktable-data/tracktable_data/python_info_data/GSHHS_shp/c/: GSHHS_c_L1.dbf  GSHHS_c_L2.dbf  GSHHS_c_L3.dbf  GSHHS_c_L5.dbf  GSHHS_c_L6.dbf
tracktable-data/tracktable_data/python_info_data/GSHHS_shp/f/: GSHHS_f_L1.dbf  GSHHS_f_L2.dbf  GSHHS_f_L3.dbf  GSHHS_f_L4.dbf  GSHHS_f_L5.dbf  GSHHS_f_L6.dbf
tracktable-data/tracktable_data/python_info_data/GSHHS_shp/h/: GSHHS_h_L1.dbf  GSHHS_h_L2.dbf  GSHHS_h_L3.dbf  GSHHS_h_L4.dbf  GSHHS_h_L5.dbf  GSHHS_h_L6.dbf
tracktable-data/tracktable_data/python_info_data/GSHHS_shp/i/: GSHHS_i_L1.dbf  GSHHS_i_L1.qix  GSHHS_i_L2.dbf  GSHHS_i_L3.dbf  GSHHS_i_L4.dbf  GSHHS_i_L5.dbf  GSHHS_i_L6.dbf
tracktable-data/tracktable_data/python_info_data/GSHHS_shp/l/: GSHHS_l_L1.dbf  GSHHS_l_L2.dbf  GSHHS_l_L3.dbf  GSHHS_l_L4.dbf  GSHHS_l_L5.dbf  GSHHS_l_L6.dbf
tracktable-data/tracktable_data/python_info_data/WDBII_shp/c/: WDBII_border_c_L1.dbf  WDBII_river_c_L02.dbf  WDBII_river_c_L08.dbf
tracktable-data/tracktable_data/python_info_data/WDBII_shp/f/: WDBII_border_f_L1.dbf  WDBII_border_f_L2.dbf  WDBII_border_f_L3.dbf  WDBII_river_f_L02.dbf  WDBII_river_f_L03.dbf  WDBII_river_f_L04.dbf  WDBII_river_f_L05.dbf  WDBII_river_f_L06.dbf  WDBII_river_f_L07.dbf  WDBII_river_f_L08.dbf  WDBII_river_f_L09.dbf  WDBII_river_f_L10.dbf  WDBII_river_f_L11.dbf
tracktable-data/tracktable_data/python_info_data/WDBII_shp/h/: WDBII_border_h_L3.dbf  WDBII_river_h_L01.dbf  WDBII_river_h_L07.dbf  WDBII_river_h_L09.dbf  WDBII_river_h_L10.dbf  WDBII_river_h_L11.dbf
tracktable-data/tracktable_data/python_info_data/WDBII_shp/i/: WDBII_river_i_L04.dbf  WDBII_river_i_L05.dbf  WDBII_river_i_L06.dbf
(+2 files in other folders)
