[metadata]
name = tracktable-data
version = 1.7.2
author = Andy Wilson
author_email = atwilso@sandia.gov
description = Tracktable Data Files
license = BSD
license_files = LICENSE.txt
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/sandialabs/tracktable-data
project_urls =
    Bug Tracker = https://github.com/sandialabs/tracktable-data/issues
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    Natural Language :: English
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent

[options]
package_dir =
    = tracktable-data
packages = find:
python_requires = >=3.6
include_package_data = True

[options.packages.find]
where = tracktable-data

